tests/specs/export_const_destructured.txt
# mod.ts
const c = { a: "a", b: 2 };
const d: { f: string; g: number; } = { f: "f", g: 2 };

export const {
  /** export a doc */
  a,
  /** export b doc */
  b,
}: {
  /** type alias doc */
  a: string;
  /** other doc */
  b: number;
} = c;

export const { f, g: h } = d;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:16:16
   | 
16 | export const { f, g: h } = d;
   |                ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:16:22
   | 
16 | export const { f, g: h } = d;
   |                      ^

# output.txt
Defined in file:///mod.ts:5:3

const a: string
  export a doc

Defined in file:///mod.ts:7:3

const b: number
  export b doc

Defined in file:///mod.ts:15:16

const f: string

Defined in file:///mod.ts:15:22

const h: number


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "a",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 5,
            "col": 2,
            "byteIndex": 123
          },
          "declarationKind": "export",
          "jsDoc": {
            "doc": "export a doc"
          },
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "string",
              "kind": "keyword",
              "value": "string"
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "b",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 7,
            "col": 2,
            "byteIndex": 150
          },
          "declarationKind": "export",
          "jsDoc": {
            "doc": "export b doc"
          },
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "number",
              "kind": "keyword",
              "value": "number"
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "f",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 15,
            "col": 15,
            "byteIndex": 250
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "string",
              "kind": "keyword",
              "value": "string"
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "h",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 15,
            "col": 21,
            "byteIndex": 256
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "number",
              "kind": "keyword",
              "value": "number"
            },
            "kind": "const"
          }
        }
      ]
    }
  ]
}
